# daq

./: .gitignore  README.md  README.txt  Software_vers.txt
analyzer/: CYG.xml  CYGAnalyzer.html  README  offlineConfig.xml  romeConfig.xml
analyzer/include/tabs/: CYGTEventDisplay.h  CYGTFeatures.h
analyzer/include/tasks/: CYGTReadData.h  CYGTWriteData.h
analyzer/include/util/: Picture.h  Waveform.h
analyzer/src/tabs/: CYGTEventDisplay.cpp  CYGTFeatures.cpp  CYGTWaveformDisplay.cpp
analyzer/src/tasks/: CYGTReadData.cpp  CYGTWriteData.cpp
analyzer/src/util/: Picture.cpp  Waveform.cpp
middleware/: .gitignore
middleware/dev/: event_producer.py  event_receiver_pmt_lnf.py  midas2cloud_v0.1.py  readHVGEM.py  runlog_LNF_auto.csv
offline/: Cycle_2cloud.py  Cycle_Dumper_mid2cloud.py  Cycle_Local_Dumper.py  DataTreeBaseClass.C  DataTreeBaseClass.h  DataTreeBaseClass_old.C  Makefile  PlainHdf5Dumper.py  PlainTObjectsDumper.cc  PlainTObjectsDumper.py  README.md  RootHistToNumpyExample.py
online/: #scfe.cxx#  .LOGGER_HISTORY_EVENTS.TXT  .ODB.SHM  .SHM_HOST.TXT  CMakeCache.txt  CMakeLists.txt  CMakeLists_stable.txt  DataTaking_noped.msl  DataTaking_noped.xml  DataTaking_onlyped.msl  DataTaking_onlyped.xml  Makefile  Seq_multisource_PMT  arduino_motor.cxx  arduino_motor.h  cmake_install.cmake  cygnus_fe.c  cygnus_fe.cxx  cygnus_fe_221027.cxx  cygnus_fe_221027_chefunziona.cxx  cygnus_fe_221027_test.cxx  cygnus_fe_LNF_230317.cxx  cygnus_fe_LNGS_230317.cxx  cygnus_fe_lnf_221207.cxx  cygnus_fe_lnf_221213.cxx  cygnus_fe_lngs_221207.cxx  experim.h  exptab  gas_recovery.odb  gem_dd_sy4527.cxx  gem_hv.cxx  gem_hv.h  htpasswd.txt  iseg_hps.cxx  iseg_hps.h  kill_daq.sh  lime_lngs.odb  mail_allarm.sh  nohup.out  opc.cxx  (+5 more)
online/ctables/: ctables_-0.5offset_before_DCO_gr1_cell.txt  ctables_-0.5offset_gr0_cell.txt  ctables_-0.5offset_gr2_nsample.txt  ctables_0.5offset_gr2_time.txt  ctables_0offset_before_DCO_gr0_time.txt  ctables_0offset_before_DCO_gr2_cell.txt  ctables_0offset_before_DCO_gr3_time.txt  ctables_0offset_gr0_nsample.txt  ctables_0offset_gr1_nsample.txt  ctables_0offset_gr1_time.txt  ctables_0offset_gr3_cell.txt  ctables_0offset_gr3_nsample.txt  ctables_0offset_gr4_cell.txt
online/custom/: GasSystem.html  camera_status.html  gas_system.html  hv.html  hv_gem.html  hv_pmt.html  monitor.html  source_motor.html  trgmod.html
online/dev/: checkGasController.py  gasController.py  python_fe.py
online/mydrivers/camera/: common.cpp  common.h  console4.h
online/mydrivers/camera_bkp/: common.cpp  common.h  qthread.h
online/mydrivers/ethernet/: lecroy_lib.cc  lecroy_lib.h
online/mydrivers/trgmod/: main  main.cpp  mqttCustom.h  trgmod.cxx  trgmod.h
online/mydrivers/vme/: caenBridge.cxx  caenBridge.h  v1190.cxx  v1190.h
